--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/Assessment2/.vs/Assessment2/v16/Server/sqlite3/db.lock
+/Assessment2/Assessment2
